--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
         <main>
             <header>
-                <div id="menu">
+                <div class="menu">
                     <img src="img/menu/sushi.png" alt="sushi" id="sushi">
-                    <div class='sidebar'>
+                    <div>
                         <ul class="buttons">
-                            <li id="buger">
-                                <img src="img/menu/burger.png">
-                                <!-- <ul>
+                            <li id="burger">
+                                <img class="menu_head" src="img/menu/burger.png">
+                                <ul class="menu_body">
                                     <li><a href=''>Menu</a></li>
                                     <li><a href=''>Reviews</a></li> 
                                     <li><a href=''>About us</a></li>
                                     <li><a href=''>Contact</a></li>
-                                </ul> -->
+                                </ul>
                             </li>
                             <li id="user"><img src="img/menu/user.png"><p>User</p></li>
                             <li id="cart"><img src="img/menu/telega.png"><p>Cart</p></li>
@@ -191,5 +192,6 @@
             </footer>
             <p class="company"><img src="img/heart.png">We Boomin © 2020</p>
         </main>
+        <script src="main.js" type="text/javascript"></script>
     </body>
 </html>
