--- a/index.html
+++ b/index.html
@@ -67,35 +67,35 @@
                                 <h3>Salmon avocado</h3>
                                 <p class="pieces">8 pieces</p>
                                 <p class="description">Salmon with avocado, cucumber, rice, nori.</p>
-                                <button>£18</button>
+                                <button><p>£18</p></button>
                             </li>
                             <li class="order">
                                 <img src="img/orders/2.png">
                                 <h3>Salmon maki</h3>
                                 <p class="pieces">8 pieces</p>
                                 <p class="description">Salmon maki with rice, nori.</p>
-                                <button>£12</button>
+                                <button><p>£12</p></button>
                             </li>  
                             <li class="order">
                                 <img src="img/orders/3.png">
                                 <h3>Avocado Kaburimaki</h3>
                                 <p class="pieces">8 pieces</p>
                                 <p class="description">Avocado Kaburimaki with tobiko, rice, nori.</p>
-                                <button>£18</button>
+                                <button><p>£18</p></button>
                             </li>  
                             <li class="order">
                                 <img src="img/orders/4.png">
                                 <h3>Salmon Kaburimaki</h3>
                                 <p class="pieces">8 pieces</p>
                                 <p class="description">Salmon Kaburimaki with avocado, tobiko, sesame seeds, rice, nori.</p>
-                                <button>£20</button>
+                                <button><p>£20</p></button>
                             </li>  
                             <li class="order">
                                 <img src="img/orders/5.png">
                                 <h3>Avocado maki</h3>
                                 <p class="pieces">8 pieces</p>
                                 <p class="description">Avocado, cucumber, sesame seeds, sweet soy, rice, nori.</p>
-                                <button>£10</button>
+                                <button><p>£10</p></button>
                             </li>     
                         </ul>
                     </div>
