--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <p class="signature">Jeanne A</p>
                             <p class="date">Reviewed May 2, 2015</p>
                         </div>
-                        <button><img src="img/reviews/Tripadvisor.png"></button>
+                        <button id="reviewButt"><img src="img/reviews/Tripadvisor.png"></button>
                     </div>
                     <div class="aboutUs">    
                         <div class="gallery">
