--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     </head>
     <body>
         <main>
@@ -179,9 +181,9 @@
             </article>
             <footer>
                 <ul>
-                    <li class="folow"><p>Folow us:</p><a href="#"><img src="img/fb.png"></a><a href="#"><img src="img/inst.png"></a></li>
-                    <li class="two"><a href="#"><img src="img/phone.png"></a><p>020 7287 5766</p></li>
-                    <li class="two"><a href="#"><img src="img/email.png"></a><p>info@sushi.co.uk</p></li>
+                    <li class="folow"><p>Folow us:</p><a href="#" class="hide-option" title="facebook"><img src="img/fb.png"></a><a href="#" class="hide-option" title="instagram"><img src="img/inst.png"></a></li>
+                    <li class="two"><a href="#" class="hide-option" title="phone"><img src="img/phone.png"></a><p>020 7287 5766</p></li>
+                    <li class="two"><a href="#" class="hide-option" title="email"><img src="img/email.png"></a><p>info@sushi.co.uk</p></li>
                     <li class="last"><p>Subscribe our newsletter</p>
                         <div class="email">
                             <input name="q" class="adress" placeholder="E-mail">
